[package]
name = "lights-sengled"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
paho-mqtt = "0.8.0"
serde = "1.0.118"
serde_json = "1.0.60"
smol = "1.2.5"
surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
thiserror = "1.0.22"
uuid = "0.8.1"
